network-policies/policies/allow-color-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-color-api
spec:
  podSelector: 
    matchLabels:
      app: curl
  policyTypes:
    - Egress
  egress:
    - to: 
      - podSelector:
          matchLabels:
            app: color-api
