network-policies/policies/allow-curl.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-curl
spec:
  podSelector: 
    matchLabels:
      app: color-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        #- podSelector:
        #    matchLabels:
        #      app: curl
        #      tier: backend
        #- podSelector:
        #    matchLabels:
        #      tier: backend
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dev
          podSelector:
            matchLabels:
              app: traffic-generator
        - podSelector:
            matchLabels:
              app: curl
